--- a/docs/glossary.qmd
+++ b/docs/glossary.qmd
@@ -17,15 +17,12 @@ format:
     include-in-header:
       - text: |
           <script src="./../components/backToTop.js"></script>
+          <script src="./../components/atlasToc.js"></script>
 ---
 
 ```{=html}
-<script>
-window.atlasTocConfig = { headingLevels: [1, 2] };
-</script>
+<atlas-toc heading-levels="1,2"></atlas-toc>
 ```
-
-{{< include "/components/_toc.qmd" >}}
 
 <back-to-top></back-to-top>
 
