feat(toc): use intersection observer for toc and only show h2 for faq

--- a/docs/faq.qmd
+++ b/docs/faq.qmd
@@ -21,7 +21,7 @@ format:
 ---
 
 ```{=html}
-<atlas-toc heading-levels="1,2"></atlas-toc>
+<atlas-toc heading-levels="2"></atlas-toc>
 ```
 
 <back-to-top></back-to-top>
@@ -39,14 +39,14 @@ const LANGUAGES = [
   {
     code: "EN",
     label: "English",
-    section: "Section EN",
+    section: "sectionEN",
     question: "Question EN",
     answer: "Answer EN",
   },
   {
     code: "FR",
     label: "Français",
-    section: "Section FR",
+    section: "sectionFR",
     question: "Question FR",
     answer: "Answer FR",
   },
