docs(styles): Update guidelines to reflect new style position

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -401,7 +401,7 @@ The main folder structure for the project is as follows:
 ├── _quarto.yml                 # Main project configuration
 ├── README.md                   # Main project README
 ├── _site                       # Output directory build by Quarto on render
-└── styles.css                  # Main project styling
+└── styles/main.css             # Main project styling
 ```
 
 A concise and descriptive folder name should be used for each notebook, and this name should be used consistently across the main project folders (_i.e._ as the sub-directory names in the `/notebooks`, and `/data` folders and file names in the `/images` folder).
@@ -419,7 +419,7 @@ At the moment the only data shared across all notebooks is the admin0 boundaries
 The `/helpers` folder contains code and modules that are used across the notebooks. This includes the `lang` module for the translations, some style builders to build elements on the page such as the TOC and hero image, and functions to handle other tasks. This folder also includes a post-render script which is automatically run to minify the CSS and JS files.
 
 ## Styling
-The main styling for the project can be found in the root directory under `styles.css`. Any styling that is notebook specific should be stored within the `/notebooks/notebook_name/" directory and applied using the yaml header at the top of the document/imported with OJS, or it should be including within the notebook code itself as a style block. 
+The main styling for the project can be found under `styles/main.css` with modular imports such as `styles/toc.css`. Any styling that is notebook specific should be stored within the `/notebooks/notebook_name/" directory and applied using the yaml header at the top of the document/imported with OJS, or it should be including within the notebook code itself as a style block. 
 
 # Other Documentation
 - **[Observable Documentation](https://observablehq.com/documentation/)**: for any questions about Observable, their documentation is a great resource. 
