--- a/docs/doc_index.qmd
+++ b/docs/doc_index.qmd
@@ -7,4 +7,4 @@ title: "Adaptation Atlas Documentation Index"
 - [Guidelines for Observable Notebooks](/docs/nb_guidelines.qmd)
 - [Notebook Translation Guide](/docs/translation.qmd)
 - [Glossary](/docs/glossary.qmd)
-
+- [Frequently Asked Questions](/docs/faq.qmd)
