docs: Add example directly from hazardExposure notebook code in how admin selectors should be used

--- a/notebooks/hazardExposure/adminSelect.qmd
+++ b/notebooks/hazardExposure/adminSelect.qmd
@@ -87,3 +87,37 @@ the notebook as many times as needed and the values can always be accessed
 through the `admin*Select` object.
 
 `{ojs} buildAdminMultiForm()`
+
+## Example from the notebook
+
+- No need for viewof
+- No need to access the .value property of hz_admin1, hz_admin2, etc. value
+  should always be accessed as `admin*Select`
+
+```{ojs}
+//| echo: true
+import { inputTemplate } from "/helpers/std.ojs";
+// Geography selectors (standard Atlas boundary UI)
+hz_admin0 = renderA0Multi({ langkey: "en", maxSelections: 8 });
+hz_admin1 = renderA1Multi({ langkey: "en", maxSelections: 12 });
+hz_admin2 = renderA2Multi({ langkey: "en", maxSelections: 20 });
+
+// Render the 3 selectors with the shared input template
+hz_geoUI = html`<div class="hz-geoRow">${inputTemplate({ gap: "10px" })([hz_admin0, hz_admin1, hz_admin2])}</div>`;
+
+// Build a reusable form that can be used over and over in the notebook
+
+buildAdminMultiForm = () => {
+  const admin0 = renderA0Multi({ langkey: "en", maxSelections: 8 });
+  const admin1 = renderA1Multi({ langkey: "en", maxSelections: 12 });
+  const admin2 = renderA2Multi({ langkey: "en", maxSelections: 20 });
+  return Inputs.form([admin0, admin1, admin2], {
+    template: (inputs) =>
+      html`<div style="display: flex; gap: 2em;">${inputs}</div>`,
+  });
+};
+
+buildAdminMultiForm();
+
+buildAdminMultiForm();
+```
