chore: Restructure and clean project directory for more clarity and maintainability. Update docs to reflect this

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -195,7 +195,7 @@ Each notebook should include a single hero image in `.webp` format, optimized fo
 The below example shows how to use this function:
 
 ```sh
-quarto run helpers/cropToWebP.ts 'default_im.webp' 'default_crop.webp'
+quarto run scripts/assets/cropToWebP.ts 'default_im.webp' 'default_crop.webp'
 ```
 
 # Data
