--- a/notebooks/roi/notebook.qmd
+++ b/notebooks/roi/notebook.qmd
@@ -24,7 +24,7 @@ import { heroImage as atlasHero } from "/helpers/hero.js";
 import {
   filterableDataTable as atlasTable,
   sparkbar,
-} from "/components/atlasTable.ojs";
+} from "/helpers/atlasTable.ojs";
 ```
 
 ```{ojs}
