docs(guidelines): Update docs to reflect new TOC

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -70,19 +70,13 @@ We have put together a table of contents function that should be used across not
 ```{ojs}
 //| echo: true
 //| code-fold: show
-import { atlasTOC } from "/helpers/uiComponents.ojs"
+import { atlasTOC } from "/helpers/toc.ojs"
 
-toc_bottom = atlasTOC({
+atlasTOC({
   skip: ['notebook-title', 'appendix', 'source-code'], // heading ids to skip
   heading: `<b>In This Notebook</b>`,
   selector: "h1", // Selectors to include (e.g., "h1,h2,h3")
 })
-
-htl.html`
-      <div class='floating-toc'>
-      ${toc_bottom}
-      </div>
-      `
 ```
 
 Notice that by defining the id's for each header, we can specify which ones to ignore in the TOC. The function defaults to only show h1 headers but this can be adjusted by changing the selector variable, but in general it should stay as h1. 
@@ -360,7 +354,8 @@ To import a local JS module or code in an OJS file (documented [here](https://qu
 ```{ojs}
 import { lang as Lang } from "/helpers/lang.js"
 
-import { atlasTOC, atlasHero  } from "/helpers/uiComponents.ojs"
+import { atlasTOC } from "/helpers/toc.ojs"
+import { atlasHero } from "/helpers/uiComponents.ojs"
 ```
 ````
 
