--- a/notebooks/hazardExposure/hazardExposure.qmd
+++ b/notebooks/hazardExposure/hazardExposure.qmd
@@ -4410,9 +4410,9 @@ hz_q2_settingsWrap = html`
   <div class="hz-qToolbar__right">
     <div class="hz-inlineToggles">
       <div class="hz-miniSetting"><span>Show %</span>${viewof hz_q2_relative}</div>
-      <div class="hz-miniSetting"><span>Difference</span>${viewof hz_q2_difference}</div>
-      <div class="hz-miniSetting"><span>Compound</span>${viewof hz_q2_showCompound}</div>
-      <div class="hz-miniSetting"><span>Simplify</span>${viewof hz_q2_simplifyCompound}</div>
+      <div class="hz-miniSetting"><span>Show differences</span>${viewof hz_q2_difference}</div>
+      <div class="hz-miniSetting"><span>Show compound hazards</span>${viewof hz_q2_showCompound}</div>
+      <div class="hz-miniSetting"><span>Simplify compound hazards</span>${viewof hz_q2_simplifyCompound}</div>
       <div class="hz-miniSetting hz-miniSetting--range"><span>Number of commodities</span>${viewof hz_q2_topN}</div>
       <div class="hz-miniSetting hz-miniSetting--range"><span>Height</span>${viewof hz_q2_chartHeight}</div>
     </div>
@@ -4470,7 +4470,7 @@ hz_q2_mountTable = {
 hz_q2_dashboardCard = hz_noJumpRoot(html`
 <div class="hz-card">
   <div class="hz-card__body">
-    <div class="hz-qOverview">${q2DetailText}</div>
+    <div class="hz-qOverview">${md`${q2DetailText}`}</div>
 
         <div class="hz-qToolbar">
       <div class="hz-qToolbar__left">${viewof hz_q2_viewMode}</div>
