docs(guidelines): Update notebook guidelines to reflect new path of webp optimizer.

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -184,7 +184,7 @@ var1_master
 ```
 
 ## Images
-Each notebook should include a single hero image in `.webp` format, optimized for minimal file size without noticeable quality loss. Save the image in the `/images` directory using the notebook's name as the filename. Included in the `/helpers` folder is a function to crop an image to the required size of 800x175 pixels and convert it to `webP`, if not already in this format. It is not required to use this function, but images do need to be in webP and cropped to this size for best performance. If a specific part of the image should be used, it should be manually cropped, rather than using the function.
+Each notebook should include a single hero image in `.webp` format, optimized for minimal file size without noticeable quality loss. Save the image in the `/images` directory using the notebook's name as the filename. Included in the `/scripts/assets` folder is a function to crop an image to the required size of 800x175 pixels and convert it to `webP`, if not already in this format. It is not required to use this function, but images do need to be in webP and cropped to this size for best performance. If a specific part of the image should be used, it should be manually cropped, rather than using the function.
 
 The below example shows how to use this function:
 
